# apps.core.preloaded.ug-setting-homescreen-efl

./: CMakeLists.txt  LICENSE  homescreen-setting-data.c  homescreen-setting-data.h  homescreen-setting-efl.c  homescreen-setting-efl.h  homescreen-setting-main.c  homescreen-setting-main.h  homescreen-setting-type.c  homescreen-setting-type.h  project.config  ug.setting-homescreen-efl.include
packaging/: ug-homescreen-setting-efl.spec  ug-setting-homescreen-efl.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+10 more)
